# final-project-rival

./: .gitignore  CMakeLists.txt  README.md
config/: rover_config.yaml  rover_config_examples.yaml
docs/: ROVER_INTEGRATION.md  ROVER_QUICK_START.md  STM32_ELECTRICAL_GUIDE.md  STM32_INTEGRATION.md
firmware/arduino/: pins_example.md  rover_firmware.ino
firmware/stm32/: README.md  proto.c  proto.h  stm32_adapter.c  stm32_adapter.h
scripts/: run_rover.sh  send_char.sh  setup_bluetooth.sh
src/: autonomous_rover.cpp  command_protocol.hpp  obstacle_detector.cpp  obstacle_detector.hpp  path_planner.cpp  path_planner.hpp  robot_bridge.cpp  robot_bridge.hpp  serial_transport.cpp  serial_transport.hpp  yolo_detector.cpp  yolo_detector.hpp
